<resources>
    <string name="app_name">Food Review</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Food review</string>
    <string name="nav_header_subtitle">Test user</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Main menu</string>
    <string name="menu_reviews">Reviews</string>
    <string name="menu_log_out">Log out</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Log in</string>
    <string name="login_signup">Sign up</string>

    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <string name="signup_createaccount">Create</string>
    <string name="signup_cancel">Cancel</string>
    <string name="signup_alertdialog_notsaved">Account not created</string>
    <string name="signup_alertdialog_confirm">Are you sure that you want to exit? All your changes will be removed</string>
    <string name="signup_alertdialog_exit">Exit</string>
    <string name="signup_alertdialog_keepediting">Keep editing</string>
    <string name="signup_passwordagain">Password again</string>
    <string name="signup_password_tooshort">Password is too short (min 12 chars)</string>
    <string name="signup_password_uppercase">Password must have an uppercase character</string>
    <string name="signup_password_lowercase">Password must have a lowercase character</string>
    <string name="signup_password_toolong">Password is too long (max 32 chars)</string>
    <string name="signup_password_nonumbers">Password must have a number</string>
    <string name="signup_password_notequal">Passwords are not the same</string>
    <string name="signup_password_nospecialchar">Password must have a special character</string>
    <string name="signup_wrongusername">Username must be atleast 6 and max 16 characters long</string>
    <string name="login_usercreated1">User</string>
    <string name="login_usercreated2">created</string>

    <string name="university">University:</string>
    <string name="restaurant">Restaurant:</string>
    <string name="settings_title">Settings</string>
    <string name="settings_loggedinas">Logged in as user:</string>
    <string name="settings_hint_oldpassword">Old password</string>
    <string name="button_review">Give a review</string>
    <string name="fragment_newreview">New review</string>
    <string name="review_title">Give a review</string>
    <string name="review_save">Save</string>
    <string name="review_cancel">Cancel</string>
    <string name="review_reviewtext">Own reviews:</string>
    <string name="review_activitytitle">Review</string>
    <string name="signup_usernametaken">Unfortunately this username has already been taken. Please choose another one.</string>
    <string name="login_failed">Wrong username or password</string>
    <string name="settings_hint_newpassword">New password</string>
    <string name="settings_hint_newpasswordagain">New password again</string>
    <string name="settings_changepassword">Change password</string>
    <string name="menu_admin">Admin</string>
    <string name="settings_oldpasswordwrong">Old password is not correct</string>
    <string name="settings_passwordsuccessful">Password changed</string>
    <string name="settings_oldnewpasswordnotequal">Old and new passwords can\'t be the same</string>
    <string name="settings_passworderror">Oops! Something went wrong with saving the password. Try again in a few minutes</string>
    <string name="admin_title">Admin</string>
    <string name="fragment_foodTitleNameNull">Null</string>
    <string name="ratingCancelled">Rating cancelled</string>
    <string name="ratingRated">rated</string>
    <string name="loginFragment_continue">Continue</string>
    <string name="authenticator_correct">Authentication successful</string>
    <string name="authenticator_wrong">Authentication failed, try again</string>
    <string name="authenticator_title">Write the 6 numbers you see below</string>
    <string name="settings_alertdialog_notsaved">Settings not saved</string>
    <string name="admin_restaurant">Restaurant</string>
    <string name="admin_fragment_restaurantname">Name:</string>
    <string name="admin_fragment_address">Address:</string>
    <string name="admin_menu_newrestaurant">Add new restaurant</string>
    <string name="admin_menu_newfood">Add new food</string>
    <string name="date">Date:</string>
    <string name="dateBtn">Date</string>
    <string name="admin_fragment_price">Price:</string>
    <string name="admin_fragment_date">Date:</string>
    <string name="admin_fragment_title">Admin item edit view</string>
    <string name="adminusermanager_menu_main">Manage restaurants and foods</string>
    <string name="admin_menu_usermanager">Manage users</string>
    <string name="adminusermanager_title">User manager</string>
    <string name="admin_menu_savecsv">Save to CSV</string>
    <string name="adminusermanager_adminrow">Admin</string>
    <string name="admin_fragment_newrestaurant">Admin\'s new restaurant view</string>
    <string name="admin_fragment_newfood">Admin\'s new food view</string>
    <string name="settings_changenickname">Change nickname</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_changesettings">Save settings</string>
    <string name="settings_nicknamesuccessful">Nickname changed</string>
    <string name="settings_nonewchanges">No new changes to be saved</string>
    <string name="settings_hintnickname">Nickname</string>
    <string name="main_price">Price:</string>
    <string name="main_avg_grade">Average grade:</string>
    <string name="review_grade">Grade:</string>
    <string name="signup_nickname">Nickname</string>
    <string name="signup_homeUni">Home university:</string>
    <string name="signup_wrongnickname">Nickname must contain atleast 1 character and max 16 characters</string>
    <string name="review_reviewadmintext">All reviews:</string>
    <string name="main_foodreviewed">Reviewed</string>
    <string name="admin_fillempty">Fill empty fields</string>
    <string name="cancelled">Cancelled</string>
    <string name="newrestaurant">New restaurant</string>
    <string name="newfood">New food</string>
    <string name="editrestaurant">"Edited restaurant "</string>
    <string name="editfood">"Edited food "</string>
    <string name="review_writeafewwords">Come on, write a few words as well!</string>
    <string name="admin_menu_savejson">Save to JSON</string>
</resources>
