<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LogInActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="315dp"
        android:layout_height="391dp"
        android:background="@drawable/layout_round"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/username"
            android:layout_width="245dp"
            android:layout_height="41dp"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_person"
            android:ems="10"
            android:hint="@string/signup_username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="245dp"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_person"
            android:ems="10"
            android:hint="@string/signup_nickname"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="245dp"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_lock"
            android:ems="10"
            android:hint="@string/signup_password"
            android:inputType="textPassword"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="@+id/nickname"
            app:layout_constraintTop_toBottomOf="@+id/nickname" />

        <EditText
            android:id="@+id/newPasswordAgain"
            android:layout_width="245dp"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_lock"
            android:ems="10"
            android:hint="@string/signup_passwordagain"
            android:inputType="textPassword"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="@+id/newPassword"
            app:layout_constraintTop_toBottomOf="@+id/newPassword" />

        <Button
            android:id="@+id/create"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/signup_createaccount"
            app:layout_constraintStart_toStartOf="@+id/uniSpinner"
            app:layout_constraintTop_toBottomOf="@+id/uniSpinner" />

        <Button
            android:id="@+id/cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="2dp"
            android:text="@string/signup_cancel"
            app:layout_constraintStart_toEndOf="@+id/create"
            app:layout_constraintTop_toTopOf="@+id/create" />

        <Spinner
            android:id="@+id/uniSpinner"
            android:layout_width="245dp"
            android:layout_height="27dp"
            app:layout_constraintStart_toStartOf="@+id/homeUni"
            app:layout_constraintTop_toBottomOf="@+id/homeUni" />

        <TextView
            android:id="@+id/homeUni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/signup_homeUni"
            app:layout_constraintStart_toStartOf="@+id/newPasswordAgain"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordAgain" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>